# intellidyn

./: .env  .gitignore  Cargo.toml  INVENTORY 30 JUNE 2023.xlsx  JUNE RM IN CHALLAN DETAILS.xls  Makefile  README.md  RM REQUIREMENT JUNE-2023.xlsx  incoming_steels.csv  july_schedule.csv  merge_range.xlsx  script.ps1  steel.csv
src/: .env  access_level.rs  db_client.rs  error.rs  errors.rs  handler.rs  lib.rs  main.rs  service.rs  test.rs
src/apis/company/: company_config.rs  company_model.rs  company_routes.rs  mod.rs
src/file_builder/: mmc.rs  mod.rs
src/routes/: mod.rs  response.rs
src/routes/approved_components/: approved_components_model.rs  create_approvals.rs  delete_approvals.rs  find_approvals.rs  mod.rs  update_approvals.rs
src/routes/auth/: auth_model.rs  create_auth.rs  find_auths.rs  mod.rs  user_login.rs
src/routes/bill_of_material/: bill_of_material_model.rs  bom_model.rs  create_bom.rs  delete_bom.rs  find_bom.rs  mod.rs  update_bom.rs
src/routes/crud/: create.rs  mod.rs  response.rs
src/routes/cutting/: create_cutting.rs  cutting_model.rs  find_cutting.rs  mod.rs  update_cutting.rs
src/routes/cutting_material/: create_cutting_material.rs  cutting_material_model.rs  find_cutting_material.rs  inventory.rs  mod.rs
src/routes/cutting_production/: create_request.rs  cutting_request_model.rs  mod.rs
src/routes/cutting_store/: create_cutting_inventory.rs  cutting_store_model.rs  find_cutting_inventory.rs  mod.rs
src/routes/fg_material/: create_fg_material.rs  fg_material_model.rs  find_fg_material.rs  inventory.rs  mod.rs
src/routes/forging_material/: create_forging_material.rs  find_forging_material.rs  forging_material_model.rs  inventory.rs  mod.rs
src/routes/ht_material/: create_ht_material.rs  find_ht_material.rs  ht_material_model.rs  inventory.rs  mod.rs
src/routes/incoming_steel/: create_incoming.rs  delete_incoming.rs  find_incoming.rs  incoming_steel_model.rs  inventory.rs  mod.rs  update_incoming.rs
src/routes/issue_material/: create_issued_material.rs  issue_material_model.rs  mod.rs
src/routes/log/: create_log.rs  find_logs.rs  log_model.rs  mod.rs
src/routes/machines/: create_machine.rs  find_machine.rs  machine_model.rs  mod.rs
src/routes/parts/: create_part.rs  find_parts.rs  mod.rs  part_model.rs  update_part.rs
src/routes/party/: create_party.rs  find_party.rs  mod.rs  party_model.rs
src/routes/purchase_order/: create_purchase_order.rs  find_purchase_order.rs  mod.rs  purchase_order_model.rs  update_purchase_order.rs
src/routes/purchase_orders/: create_purchase_orders.rs  mod.rs  purchase_order_model.rs
src/routes/requisition/: create_requisition.rs  find_requisition.rs  mod.rs  requisition_model.rs
src/routes/rm_inventory/: create_inventory.rs  mod.rs  rm_inventory_model.rs
src/routes/users/: mod.rs  (+8 more)
(+11 files in other folders)
