[package]
name = "intellidyn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.15", features = ["tracing"] }
bcrypt = "0.14.0"
chrono = { version = "0.4.24", features = ["serde"] }
dotenv = "0.15.0"
native-tls = { version = "0.2.11", features = ["vendored"] }
num-traits = "0.2.15"
postgres-native-tls = "0.5.0"
postgres-types = { version = "0.2.5", features = ["serde-1", "derive"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
time = { version = "0.3.20", features = ["serde", "parsing", "macros", "formatting", "serde-well-known", "serde-human-readable"] }
tokio = { version = "1.27.0", features = ["full", "tracing"] }
tokio-postgres = { version = "0.7.8", features = ["array-impls", "with-serde_json-1", "with-uuid-1", "with-chrono-0_4"] }
tracing = { version = "0.1.37", features = ["async-await", "log"] }
tracing-subscriber = { version = "0.3.17", features = ["tracing", "env-filter", "serde", "time"] }
uuid = { version = "1.3.1", features = ["serde", "v4"] }
